<resources>
    <string name="app_name" translatable="false">App Manager</string>

    <string name="text_unknown_app">Oops</string>
    <string name="text_aus">App Usage Service</string>
    <string name="text_auc">App Usage Channel</string>
    <string name="text_user_applications_that_can_run">User applications that can be run</string>
    <string name="text_user_system_applications_that_can_run">User and system applications that can be run</string>
    <string name="text_package_usage_stats">Usage stats</string>
    <string name="text_used_app">Used app %s</string>
    <string name="text_user_apps">User apps</string>
    <string name="text_system_apps">System apps</string>
    <string name="text_all_apps">All apps</string>
    <string name="text_google_play" translatable="false">Google Play</string>
    <string name="text_extracting_apk">Extracting APK…</string>
    <string name="text_extracting_apk_v2">Extracting APK "%s"…</string>
    <string name="text_share_apk">Share APK</string>
    <string name="text_app_name">App Name</string>
    <string name="text_app_package">App Package</string>
    <string name="text_app_version">Version</string>
    <string name="text_app_version_code">Version Code</string>
    <string name="text_app_install_time">Install Time</string>
    <string name="text_app_update_time">Update Time</string>
    <string name="text_app_provenance">Provenance</string>
    <string name="text_nothing">There\'s nothing here</string>
    <string name="text_min_sdk">Minimum SDK Version (API)</string>
    <string name="text_target_sdk">Target SDK Version (API)</string>
    <string name="text_executed_apk">Executed APK</string>
    <string name="text_copy_to_clipboard">Copy to clipboard</string>
    <string name="text_source_dir">Source directory</string>
    <string name="text_pub_source_dir">Public source directory</string>
    <string name="text_native_library_dir">Native library directory</string>
    <string name="text_app_component_factory">Component</string>
    <string name="text_compile_sdk_version">Compile SDK Version</string>
    <string name="text_backup_agent">Backup Agent</string>
    <string name="text_size_app" translatable="false">APK</string>
    <string name="text_size_data">Data</string>
    <string name="text_size_cache">Cache</string>
    <string name="text_default">Default</string>
    <string name="text_prefs_changed">A key setting changed</string>
    <string name="text_recent_requests">Recent requests</string>
    <string name="text_time_day">d</string>
    <string name="text_time_hour">h</string>
    <string name="text_time_minute">m</string>
    <string name="text_time_second">s</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_activity_enabled">Enabled: %1s</string>
    <string name="text_activity_exported">Exported: %1s</string>
    <string name="text_permission_granded">Granded: %1s</string>
    <string name="text_apk_extracted_hidden">APK file was successfully extracted</string>
    <string name="text_app_developer">Developer (information may be unreliable)</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_nothing_not_found">Nothing was found</string>

    <string name="provenance_user">Installer</string>
    <string name="provenance_system">System</string>
    <string name="provenance_google_play" translatable="false">Google Play</string>

    <string name="channel_app_usage">App Usage Service</string>

    <string name="message_unknown_app">It looks like you are trying to open a non-existent application.</string>
    <string name="message_aus">Monitoring app usage…</string>
    <string name="message_tap_target_search_bar">Search for apps quickly and easily</string>
    <string name="message_tap_target_filter">A simple application list filter, select the list you need for convenience</string>
    <string name="message_used_app">Time in focus: %s</string>
    <string name="message_tab_basic">Here you can see all the basic information about the app</string>
    <string name="message_tab_details">Here you can find more detailed information about the application, for example: target API version, minimum API version</string>
    <string name="message_app_no_require_perms">The application does not require special permissions</string>
    <string name="message_app_no_require_activities">The application does not contain any available activities</string>
    <string name="message_no_detail_info_permission">There is no detailed information about the \"%s\" permission</string>
    <string name="message_package_usage_stats_size">Permission is required to see the size of the applications.</string>
    <string name="message_prefs_changed">You have changed an important setting, in order for it to be applied, you need to restart the application. Are you ready to do it now?</string>
    <string name="message_apk_extracted_hidden">The file \"%1s\" has been successfully extracted, now you can share it</string>
    <string name="message_view_apk">You are viewing information about an uninstalled application.</string>

    <string name="toast_app_not_deleted">The application has not been deleted.</string>
    <string name="toast_unknown_data_deleted">We were unable to process the deletion request inside the application.</string>
    <string name="toast_app_deleted">Application "%s" has been successfully deleted.</string>
    <string name="toast_package_usage_stats">Allow the application to use statistics from other applications. By allowing statistics to be used, the App Manager will track activity in other applications.</string>
    <string name="toast_extracting_apk_background">The extraction of the APK file will continue in the background…</string>
    <string name="toast_allow_unknown_sources">Allow the application to install from unknown sources</string>

    <string name="text_copied_to_clipboard">Saved to the clipboard</string>
    <string name="text_bytes">B KB MB GB TB</string>

    <string name="action_more">More</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filters</string>
    <string name="action_provide">Provide</string>
    <string name="action_stop">Stop</string>
    <string name="action_close">Close</string>
    <string name="action_hide">Hide</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_open_app">Open</string>
    <string name="action_delete_app">Delete</string>
    <string name="action_delete_extracted_apk">Delete extracted APK</string>
    <string name="action_settings_app">Manage</string>
    <string name="action_stop_app">Stop</string>
    <string name="action_share_app">Extract APK</string>
    <string name="action_find_in_gp_app">Find in Google Play</string>
    <string name="action_find_in_rustore_app">Find in RuStore</string>
    <string name="action_details_app">Details</string>
    <string name="action_permissions_app">Permissions</string>
    <string name="action_manifest_app">Manifest</string>
    <string name="action_activities_app" translatable="false">Activities</string>
    <string name="action_resources_app">Resources</string>
    <string name="action_restart">Restart</string>
    <string name="action_extracted_apps">Extracted APK</string>
    <string name="action_share">Share</string>
    <string name="action_install_app">Install</string>

    <string name="prefs_category_other">Other</string>
    <string name="prefs_category_base">Base</string>

    <string name="prefs_title_open_license_software" translatable="false">Open source licenses</string>
    <string name="prefs_title_privacy">Policy privacy</string>
    <string name="prefs_title_terms">Terms of Use</string>
    <string name="prefs_title_about_app">About app</string>
    <string name="prefs_title_language">Language</string>

    <string name="tab_details">Details</string>
    <string name="tab_basic">Basic</string>

    <string name="hint_search">Search apps</string>

    <string name="contentDescription_app_icon">App icon</string>

    <string name="developer_alexander_mikhno">Alexander Mikhno</string>
    <string name="developer_vipapp" translatable="false">• VIPAPP •</string>
    <string name="developer_google" translatable="false">Google LLC</string>
    <string name="developer_meta" translatable="false">Meta Platforms, Inc.</string>
    <string name="developer_x" translatable="false">X.com</string>
    <string name="developer_vk">VKontakte</string>
    <string name="developer_1m_solutions" translatable="false">1M Solutions</string>
</resources>