<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/containerUsageStatsSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:paddingTop="28dp"
                android:paddingBottom="8dp"
                android:visibility="gone"
                android:gravity="center_horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_package_usage_stats_size"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:gravity="center"
                    android:paddingHorizontal="48dp"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_provide"
                    android:id="@+id/buttonProvide"
                    android:layout_marginTop="6dp"
                    style="@style/Widget.Material3.Button.TonalButton"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                android:paddingHorizontal="4dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/sizeAppContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_rectangle"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_constraintEnd_toStartOf="@+id/sizeDataContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.32">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_size_app"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textSizeApp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0MB"
                        android:textSize="18sp"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        tools:ignore="HardcodedText" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/sizeDataContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_rectangle"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_constraintEnd_toStartOf="@+id/sizeCacheContainer"
                    app:layout_constraintStart_toEndOf="@+id/sizeAppContainer"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.32">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_size_data"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textSizeData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0MB"
                        android:textSize="18sp"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        tools:ignore="HardcodedText" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/sizeCacheContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_rectangle"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/sizeDataContainer"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.32">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_size_cache"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textSizeCache"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0MB"
                        android:textSize="18sp"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        tools:ignore="HardcodedText" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerViewMenu"
                android:paddingTop="6dp"
                android:paddingBottom="24dp"
                android:paddingHorizontal="16dp"
                android:nestedScrollingEnabled="false"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView"
                android:paddingBottom="16dp"
                android:nestedScrollingEnabled="false"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>