<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleTextView"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="280dp"
            android:text="@string/action_activities_app"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:ellipsize="middle"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"
            android:scrollbarStyle="outsideOverlay"
            tools:ignore="HardcodedText" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/errorContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="64dp"
            android:visibility="gone"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/errorIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_security_24"
                app:tint="?colorPrimary"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nothing"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="240dp"
                android:text="@string/message_app_no_require_activities"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginTop="4dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/mainContent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/countTextView"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="280dp"
                android:text="0"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:ellipsize="middle"
                tools:ignore="HardcodedText" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView"
                android:layout_marginTop="16dp"
                android:paddingBottom="16dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="64dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:indeterminate="true"
        app:trackCornerRadius="100dp"
        android:alpha="0"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>