<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/errorContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="64dp"
        android:visibility="gone"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/errorIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_flash_on_24"
            app:tint="?colorPrimary"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_unknown_app"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="240dp"
            android:text="@string/message_unknown_app"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="4dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="48dp"
                android:paddingBottom="24dp">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iconImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_launcher"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        app:cornerRadius="8dp"
                        android:contentDescription="@string/contentDescription_app_icon"
                        tools:ignore="HardcodedText" />

                </RelativeLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nameTextView"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="280dp"
                    android:text="App Name"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:singleLine="true"
                    android:ellipsize="middle"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="false"
                    android:scrollbarStyle="outsideOverlay"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/packageTextView"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="280dp"
                    android:text="Package Name"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"
                    android:ellipsize="middle"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="false"
                    android:scrollbarStyle="outsideOverlay"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/versionTextView"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="280dp"
                    android:text="Version 1.0"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"
                    android:ellipsize="middle"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="false"
                    android:scrollbarStyle="outsideOverlay"
                    tools:ignore="HardcodedText" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recyclerView"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="36dp"
                    android:nestedScrollingEnabled="false"
                    tools:ignore="UnusedAttribute" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>